--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,11 @@
       box-sizing: border-box;
       font-family: Roboto, sans-serif;
 }
+
+
+input[type="text"],
+input[type="number"],
+input[type="date"] {
+      min-width: 15rem;
+      max-width: 15rem;
+}
